spacing fixes

--- a/generalS.css
+++ b/generalS.css
@@ -30,13 +30,12 @@ h1 {
 
 h2 {
     font-family: Arial, sans-serif;
-    font-size: 150%;
+    font-size: 130%;
     background-color: #fc0;
     color: black;
     width: 100%;
-    min-height: 2rem;
+    height: 2rem;
     padding-top: 0.6rem;
-    padding-bottom: 0.1rem;
     margin-top: 0rem;
     border-top: 2px;
     border-top-left-radius: 4px;
@@ -44,6 +43,19 @@ h2 {
 }
 
 .container {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin: 0;
+    margin-top: 2%;    
+    display: flex;
+    padding-left: 1rem;
+    /* padding-right: 1rem; */
+}
+
+.container-header {
     font-family: Arial, sans-serif;
     background-color: white;
     display: flex;
@@ -69,13 +81,14 @@ h2 {
     background-color: white;
     border-radius: 8px;
     border: 1px solid #ccc;
-    justify-items: center;
     width: 25%;
     height: 100%;
+    /* padding: 0rem; */
     padding-bottom: 1rem;
     text-align: center;
+    /* align-items: center; */
     margin-right: 20px; 
-    line-height: 25px;
+    /* line-height: 25px; */
 }
 
 .box {
@@ -151,21 +164,21 @@ h2 {
 
 label {
     display: block;
-    margin-top: 0.25rem;
-    margin-bottom: 0.1rem;
+    /* margin-top: 1rem; */
+    margin-bottom: 0.5rem;
 }
 
 input {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 0rem;
+    width: 70%;
+    padding: 0.25rem;
+    margin-bottom: 1rem;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 button {
-    margin-top: 15px; /* Adjusted margin to decrease space */
-    width: 75%;
+    /* margin-top: 15px; Adjusted margin to decrease space */
+    width: 50%;
     padding: 0.25rem;
     background-color: #FCF0DA to #FAE6BF;
     background: linear-gradient(0deg, #FCF0DA, #FAE6BF);
