--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body {
     margin: 0;
     margin-top: 2%;    
     display: flex;
-    align-items: center;
 }
 
 .left-text {
